Adding Draft.pdf and Intro in Notebook

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warehouse Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### A Business is deﬁned as an integration or enterprise occupying commercial or professional exercises. Consumer and the producer share a give and take relationship. Producers business can be small, medium and large scale depending upon the targeted consumers. For the small and medium scale business, consumer requirements are easily met, and customer satisfaction is maintained. The large-scale business however targets a larger audience and it turns out to be diﬃcult to manage the requirements of a variety of consumers. To meet the requirements, the producer needs a good infrastructure in place for customers. The warehouse plays an important role as it stores all the elements to be delivered to consumers, be it a B2B or B2C entity. To maintain the wear and tear of warehouse, the warehouse manager must invest a large amount of resources to keep business running. This plan of action speaks about the automation of warehouse activities, so that the optimization of warehouse is achieved; and with the help of data science principles the maintenance of warehouse is carried on, which brings about smoothness in warehouse governance. To meet this objective, data science models will be used to identify the patterns from the dataset and the resultant will then be used as an input to the pricing mechanisms, which will keep the wearing-out products from the warehouse at bay"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -32,6 +46,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "#import numpy as np\n",
     "train = pd.read_csv('ML_1-6.csv')\n",
     "#test = pd.read_csv('test.csv')\n",
     "#train = train.drop('Loan_ID', axis=1)\n",
@@ -472,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
