Adding Exploratory Analysis

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -15,14 +15,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initilization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "List No            float64\n",
+       "List No              int64\n",
        "Item No             object\n",
        "UPC Code           float64\n",
        "Manufacturer No     object\n",
@@ -36,21 +43,128 @@
        "Date                object\n",
        "In Stock            object\n",
        "weight(lb)         float64\n",
+       "SaleRate           float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "#import numpy as np\n",
-    "train = pd.read_csv('ML_1-6.csv')\n",
-    "#test = pd.read_csv('test.csv')\n",
-    "#train = train.drop('Loan_ID', axis=1)\n",
-    "train.dtypes"
+    "import numpy as np\n",
+    "data = pd.read_csv('ML_1-6.csv')\n",
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price(USD)\n",
+      "count    4496.000000\n",
+      "mean      272.907547\n",
+      "std       592.651982\n",
+      "min         0.210000\n",
+      "25%        26.650000\n",
+      "50%        81.740000\n",
+      "75%       231.140000\n",
+      "max      7021.250000\n",
+      "Name: Price(USD), dtype: float64\n",
+      "\n",
+      "\n",
+      "Inventory\n",
+      "count    4496.000000\n",
+      "mean       57.491770\n",
+      "std       114.854261\n",
+      "min         1.000000\n",
+      "25%         5.000000\n",
+      "50%        21.000000\n",
+      "75%        52.000000\n",
+      "max      1002.000000\n",
+      "Name: Inventory, dtype: float64\n",
+      "\n",
+      "\n",
+      "In Stock\n",
+      "Y    3330\n",
+      "L     870\n",
+      "Name: In Stock, dtype: int64\n",
+      "\n",
+      "\n",
+      "weight(lb)\n",
+      "count    4198.000000\n",
+      "mean        6.475088\n",
+      "std        13.761894\n",
+      "min         0.000000\n",
+      "25%         0.350000\n",
+      "50%         1.545000\n",
+      "75%         5.490000\n",
+      "max       174.000000\n",
+      "Name: weight(lb), dtype: float64\n",
+      "\n",
+      "\n",
+      "SaleRate\n",
+      "count    8400.000000\n",
+      "mean        0.638946\n",
+      "std         0.273979\n",
+      "min         0.000000\n",
+      "25%         0.471910\n",
+      "50%         0.747191\n",
+      "75%         0.839462\n",
+      "max         0.981273\n",
+      "Name: SaleRate, dtype: float64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get some basic ideas about the data\n",
+    "def summerize_data(df, columns):\n",
+    "    for column in columns:\n",
+    "        print(column)\n",
+    "        if df.dtypes[column] == np.object: # Categorical data\n",
+    "            print(df[column].value_counts())\n",
+    "        else:\n",
+    "            print(df[column].describe())\n",
+    "            \n",
+    "        print('\\n')\n",
+    "    \n",
+    "columns = [\"Price(USD)\", \"Inventory\", \"In Stock\", \"weight(lb)\", \"SaleRate\"]\n",
+    "summerize_data(train, columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import norm\n",
+    "# if using a Jupyter notebook, inlcude:\n",
+    "%matplotlib inline"
    ]
   },
   {
