--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -300,9 +302,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## kde + histogram"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
