adding code for relationship w/ categorical values

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -355,6 +355,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Relationship with categorical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#box plot overallqual/saleprice\n",
+    "var = 'OverallQual'\n",
+    "data = pd.concat([df_train['SalePrice'], df_train[var]], axis=1)\n",
+    "f, ax = plt.subplots(figsize=(8, 6))\n",
+    "fig = sns.boxplot(x=var, y=\"SalePrice\", data=data)\n",
+    "fig.axis(ymin=0, ymax=800000);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
