Checking missing data points per feature

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -148,6 +148,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Missing Data Points Per Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1 Manufacturer No                 38\n",
+       "1-J-Price                         38\n",
+       "1-J-QTY                           38\n",
+       "Stock sold date 1                 38\n",
+       "2                                 38\n",
+       "                                  ..\n",
+       "Average % Change/stock            38\n",
+       "Manufacturer No                   38\n",
+       "Average sale qty                  38\n",
+       "Sale rate                         38\n",
+       "New sale rate (from new sheet)    38\n",
+       "Length: 365, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Graphs"
    ]
   },
@@ -373,6 +411,13 @@
     "f, ax = plt.subplots(figsize=(8, 6))\n",
     "fig = sns.boxplot(x=var, y=\"SalePrice\", data=data)\n",
     "fig.axis(ymin=0, ymax=800000);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model"
    ]
   },
   {
