--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -1587,7 +1587,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1626,11 +1628,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = encoded_data.drop('SaleRateNew', axis=1)\n",
+    "y = data['SaleRateNew']\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
