Model Tunning and Ols lasso ridge model compared

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -1811,11 +1811,307 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tunning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import metrics\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(models, X, Y, iterations = 100):\n",
+    "    results = {}\n",
+    "    for i in models:\n",
+    "        print(\"Running \", i)\n",
+    "        r2_train = []\n",
+    "        r2_test = []\n",
+    "        for j in range(iterations):\n",
+    "            X_train, X_test, y_train, y_test = train_test_split(X, \n",
+    "                                                                Y, \n",
+    "                                                                test_size= 0.2)\n",
+    "            r2_test.append(metrics.r2_score(y_test,\n",
+    "                                            models[i].fit(X_train, \n",
+    "                                                         y_train).predict(X_test)))\n",
+    "            r2_train.append(metrics.r2_score(y_train, \n",
+    "                                             models[i].fit(X_train, \n",
+    "                                                          y_train).predict(X_train)))\n",
+    "        results[i] = [np.mean(r2_train), np.mean(r2_test)]\n",
+    "    return pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {'OLS': linear_model.LinearRegression(),\n",
+    "         'Lasso': linear_model.Lasso(),\n",
+    "         'Ridge': linear_model.Ridge(),}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running  OLS\n",
+      "Running  Lasso\n",
+      "Running  Ridge\n",
+      "Wall time: 1min 8s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OLS</th>\n",
+       "      <th>Lasso</th>\n",
+       "      <th>Ridge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.720628</td>\n",
+       "      <td>0.660644</td>\n",
+       "      <td>0.718193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.652254</td>\n",
+       "      <td>0.655130</td>\n",
+       "      <td>0.663944</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OLS     Lasso     Ridge\n",
+       "0  0.720628  0.660644  0.718193\n",
+       "1  0.652254  0.655130  0.663944"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time test(models, X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 248.8136438455519, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 186.29086273074324, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 171.50532550968512, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 157.10392429370847, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 103.86498258579581, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso_params = {'alpha':[0.02, 0.024, 0.025, 0.026, 0.03]}\n",
+    "ridge_params = {'alpha':[200, 230, 250,265, 270, 275, 290, 300, 500]}\n",
+    "\n",
+    "models2 = {'OLS': linear_model.LinearRegression(),\n",
+    "           'Lasso': GridSearchCV(linear_model.Lasso(), \n",
+    "                               param_grid=lasso_params).fit(X, Y).best_estimator_,\n",
+    "           'Ridge': GridSearchCV(linear_model.Ridge(), \n",
+    "                               param_grid=ridge_params).fit(X, Y).best_estimator_,}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running  OLS\n",
+      "Running  Lasso\n",
+      "Running  Ridge\n",
+      "Wall time: 4min 13s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OLS</th>\n",
+       "      <th>Lasso</th>\n",
+       "      <th>Ridge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.719508</td>\n",
+       "      <td>0.663663</td>\n",
+       "      <td>0.683498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.658191</td>\n",
+       "      <td>0.654370</td>\n",
+       "      <td>0.669473</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OLS     Lasso     Ridge\n",
+       "0  0.719508  0.663663  0.683498\n",
+       "1  0.658191  0.654370  0.669473"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time test(models2, X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 285.1538104114978, tolerance: 0.3138071440226027\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 342.7874131589929, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 388.48554788741217, tolerance: 0.4112029848918429\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 305.0991966177412, tolerance: 0.3138071440226027\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 373.48981223007115, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 419.5967075452254, tolerance: 0.4112029848918429\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 311.4538663282518, tolerance: 0.3138071440226027\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 383.8016012687477, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 430.61029756566114, tolerance: 0.4112029848918429\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 320.22055935785596, tolerance: 0.3138071440226027\n",
+      "  positive)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso_params = {'fit__alpha':[0.005, 0.02, 0.03, 0.05, 0.06]}\n",
+    "ridge_params = {'fit__alpha':[550, 580, 600, 620, 650]}\n",
+    "\n",
+    "pipe1 = Pipeline([('poly', PolynomialFeatures()),\n",
+    "                 ('fit', linear_model.LinearRegression())])\n",
+    "pipe2 = Pipeline([('poly', PolynomialFeatures()),\n",
+    "                 ('fit', linear_model.Lasso())])\n",
+    "pipe3 = Pipeline([('poly', PolynomialFeatures()),\n",
+    "                 ('fit', linear_model.Ridge())])\n",
+    "\n",
+    "models3 = {'OLS': pipe1,\n",
+    "           'Lasso': GridSearchCV(pipe2, \n",
+    "                                 param_grid=lasso_params).fit(X, Y).best_estimator_ ,\n",
+    "           'Ridge': GridSearchCV(pipe3, \n",
+    "                                 param_grid=ridge_params).fit(X, Y).best_estimator_,}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%time test(models3, X, Y)"
+   ]
   }
  ],
  "metadata": {
