Trying PolynomialFeatures on the 3 models

--- a/Thessis/Blowout Prediction.ipynb
+++ b/Thessis/Blowout Prediction.ipynb
@@ -2082,6 +2082,12 @@
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 430.61029756566114, tolerance: 0.4112029848918429\n",
       "  positive)\n",
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 320.22055935785596, tolerance: 0.3138071440226027\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 398.8343732798803, tolerance: 0.36047169090249376\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 442.63372061779705, tolerance: 0.4112029848918429\n",
+      "  positive)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:475: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 323.6482521959317, tolerance: 0.3138071440226027\n",
       "  positive)\n"
      ]
     }
