--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -256,62 +256,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso_params = {'alpha':[0.02, 0.024, 0.025, 0.026, 0.03]}\n",
-    "ridge_params = {'alpha':[200, 230, 250,265, 270, 275, 290, 300, 500]}\n",
-    "\n",
-    "models2 = {'OLS': linear_model.LinearRegression(),\n",
-    "           'Lasso': GridSearchCV(linear_model.Lasso(), \n",
-    "                               param_grid=lasso_params).fit(X, Y).best_estimator_,\n",
-    "           'Ridge': GridSearchCV(linear_model.Ridge(), \n",
-    "                               param_grid=ridge_params).fit(X, Y).best_estimator_,\n",
-    "          }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time test(models2, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lasso_params = {'fit__alpha':[0.005, 0.02, 0.03, 0.05, 0.06]}\n",
-    "ridge_params = {'fit__alpha':[550, 580, 600, 620, 650]}\n",
-    "\n",
-    "pipe1 = Pipeline([('poly', PolynomialFeatures()),\n",
-    "                 ('fit', linear_model.LinearRegression())])\n",
-    "pipe2 = Pipeline([('poly', PolynomialFeatures()),\n",
-    "                 ('fit', linear_model.Lasso())])\n",
-    "pipe3 = Pipeline([('poly', PolynomialFeatures()),\n",
-    "                 ('fit', linear_model.Ridge())])\n",
-    "\n",
-    "models3 = {'OLS': pipe1}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running  OLS\n"
+      "\n",
+      "Running  Ada\n",
+      "0"
      ]
     }
    ],
    "source": [
-    "%time test(models3, X, Y)"
+    "ada_param = {\n",
+    " 'n_estimators': [50, 100],\n",
+    " 'learning_rate' : [0.01,0.05,0.1,0.3,1],\n",
+    " 'loss' : ['linear', 'square', 'exponential']\n",
+    " }\n",
+    "\n",
+    "models2 = {'Ada': GridSearchCV(AdaBoostRegressor(), \n",
+    "                               param_grid=ada_param).fit(X, Y).best_estimator_}\n",
+    "%time test(models2, X, Y)"
    ]
   },
   {
