--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "from sklearn.ensemble import AdaBoostRegressor\n",
     "from sklearn.svm import LinearSVR\n",
-    "from sklearn.linear_model import Perceptron"
+    "from sklearn.ensemble import GradientBoostingRegressor"
    ]
   },
   {
@@ -159,19 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "models = {'OLS': linear_model.LinearRegression(),\n",
     "         'Lasso': linear_model.Lasso(),\n",
     "         'Ridge': linear_model.Ridge(),\n",
-    "         'Ada': AdaBoostRegressor()}"
+    "         'Ada': AdaBoostRegressor(),\n",
+    "         'GBR': GradientBoostingRegressor}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -188,64 +189,22 @@
       "Running  Ridge\n",
       "0123456789\n",
       "Running  Ada\n",
-      "0123456789Wall time: 33.4 s\n"
+      "0123456789\n",
+      "Running  GBR\n",
+      "0"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>OLS</th>\n",
-       "      <th>Lasso</th>\n",
-       "      <th>Ridge</th>\n",
-       "      <th>Ada</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0.720761</td>\n",
-       "      <td>0.656874</td>\n",
-       "      <td>0.719380</td>\n",
-       "      <td>0.860119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0.650485</td>\n",
-       "      <td>0.667651</td>\n",
-       "      <td>0.659741</td>\n",
-       "      <td>0.830207</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        OLS     Lasso     Ridge       Ada\n",
-       "0  0.720761  0.656874  0.719380  0.860119\n",
-       "1  0.650485  0.667651  0.659741  0.830207"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "fit() missing 1 required positional argument: 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<timed eval>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-30-d36d788ce1c0>\u001b[0m in \u001b[0;36mtest\u001b[1;34m(models, X, Y, iterations)\u001b[0m\n\u001b[0;32m     12\u001b[0m             r2_test.append(metrics.r2_score(y_test,\n\u001b[0;32m     13\u001b[0m                                             models[i].fit(X_train, \n\u001b[1;32m---> 14\u001b[1;33m                                                          y_train).predict(X_test)))\n\u001b[0m\u001b[0;32m     15\u001b[0m             r2_train.append(metrics.r2_score(y_train, \n\u001b[0;32m     16\u001b[0m                                              models[i].fit(X_train, \n",
+      "\u001b[1;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'y'"
+     ]
     }
    ],
    "source": [
