All Data merged for model

--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,8 +148,8 @@
     "                                                                Y, \n",
     "                                                                test_size= 0.2)\n",
     "            r2_test.append(metrics.r2_score(y_test,\n",
-    "                                            models[i].fit(X_train, \n",
-    "                                                         y_train).predict(X_test)))\n",
+    "                                            models[i].fit(X_test, \n",
+    "                                                         y_test).predict(X_test)))\n",
     "            r2_train.append(metrics.r2_score(y_train, \n",
     "                                             models[i].fit(X_train, \n",
     "                                                          y_train).predict(X_train)))\n",
@@ -159,20 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "models = {'OLS': linear_model.LinearRegression(),\n",
     "         'Lasso': linear_model.Lasso(),\n",
     "         'Ridge': linear_model.Ridge(),\n",
-    "         'Ada': AdaBoostRegressor(),\n",
-    "         'GBR': GradientBoostingRegressor}"
+    "         'Ada': AdaBoostRegressor()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -189,22 +188,64 @@
       "Running  Ridge\n",
       "0123456789\n",
       "Running  Ada\n",
-      "0123456789\n",
-      "Running  GBR\n",
-      "0"
+      "0123456789Wall time: 23.8 s\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "fit() missing 1 required positional argument: 'y'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<timed eval>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-30-d36d788ce1c0>\u001b[0m in \u001b[0;36mtest\u001b[1;34m(models, X, Y, iterations)\u001b[0m\n\u001b[0;32m     12\u001b[0m             r2_test.append(metrics.r2_score(y_test,\n\u001b[0;32m     13\u001b[0m                                             models[i].fit(X_train, \n\u001b[1;32m---> 14\u001b[1;33m                                                          y_train).predict(X_test)))\n\u001b[0m\u001b[0;32m     15\u001b[0m             r2_train.append(metrics.r2_score(y_train, \n\u001b[0;32m     16\u001b[0m                                              models[i].fit(X_train, \n",
-      "\u001b[1;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'y'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OLS</th>\n",
+       "      <th>Lasso</th>\n",
+       "      <th>Ridge</th>\n",
+       "      <th>Ada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.721012</td>\n",
+       "      <td>0.656732</td>\n",
+       "      <td>0.718895</td>\n",
+       "      <td>0.858474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.779676</td>\n",
+       "      <td>0.674644</td>\n",
+       "      <td>0.766328</td>\n",
+       "      <td>0.894417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OLS     Lasso     Ridge       Ada\n",
+       "0  0.721012  0.656732  0.718895  0.858474\n",
+       "1  0.779676  0.674644  0.766328  0.894417"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -213,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +271,7 @@
      "text": [
       "\n",
       "Running  Ada\n",
-      "0123456789Wall time: 2min\n"
+      "0123456789Wall time: 1min 13s\n"
      ]
     },
     {
@@ -260,11 +301,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.866413</td>\n",
+       "      <td>0.867922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.862020</td>\n",
+       "      <td>0.883609</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -272,11 +313,11 @@
       ],
       "text/plain": [
        "        Ada\n",
-       "0  0.866413\n",
-       "1  0.862020"
+       "0  0.867922\n",
+       "1  0.883609"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,17 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AdaBoostRegressor(base_estimator=None, learning_rate=0.01, loss='exponential',\n",
+       "AdaBoostRegressor(base_estimator=None, learning_rate=0.01, loss='square',\n",
        "                  n_estimators=50, random_state=None)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
