New Notebook Created for Time series model

--- a/Thessis/Blowout Prediction (Time Series Prediction).ipynb
+++ b/Thessis/Blowout Prediction (Time Series Prediction).ipynb
@@ -483,6 +483,7 @@
     }
    ],
    "source": [
+    "#unique data checking\n",
     "stock_data = data[data.Date == '01-Jan-19'].i\n",
     "merge_df = df.set_index('key').join(other.set_index('key'))\n",
     "print(stock_data[stock_data.Inventory > 0].shape)\n",
