--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -260,16 +260,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
       "  warnings.warn(CV_WARNING, FutureWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Running  Ada\n",
+      "0123456789\n",
+      "Running  GBM\n",
+      "0123456789Wall time: 2min 26s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ada</th>\n",
+       "      <th>GBM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.868326</td>\n",
+       "      <td>0.878586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.873587</td>\n",
+       "      <td>0.921307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Ada       GBM\n",
+       "0  0.868326  0.878586\n",
+       "1  0.873587  0.921307"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,24 +353,55 @@
     "models2 = {'Ada': GridSearchCV(AdaBoostRegressor(), \n",
     "                               param_grid=ada_param).fit(X, Y).best_estimator_,\n",
     "          'GBM': GridSearchCV(GradientBoostingRegressor(), \n",
-    "                               param_grid=ada_param).fit(X, Y).best_estimator_}\n",
+    "                               param_grid=gbm_param).fit(X, Y).best_estimator_}\n",
     "%time test(models2, X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostRegressor(base_estimator=None, learning_rate=0.01, loss='exponential',\n",
+       "                  n_estimators=50, random_state=None)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models2['Ada']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+       "                          learning_rate=0.05, loss='huber', max_depth=3,\n",
+       "                          max_features=None, max_leaf_nodes=None,\n",
+       "                          min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                          min_samples_leaf=1, min_samples_split=2,\n",
+       "                          min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "                          n_iter_no_change=None, presort='auto',\n",
+       "                          random_state=None, subsample=1.0, tol=0.0001,\n",
+       "                          validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models2['GBM']"
    ]
