--- a/Thessis/Blowout Prediction (Time Series Prediction).ipynb
+++ b/Thessis/Blowout Prediction (Time Series Prediction).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -42,6 +42,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Item No</th>\n",
        "      <th>Manufacturer</th>\n",
        "      <th>Category</th>\n",
        "      <th>Category Path 1</th>\n",
@@ -62,6 +63,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -80,6 +82,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -98,6 +101,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -116,6 +120,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -134,6 +139,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -152,6 +158,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -170,6 +177,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -188,6 +196,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -206,6 +215,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -224,6 +234,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
+       "      <td>1000M500D1</td>\n",
        "      <td>Crucial</td>\n",
        "      <td>SATA3</td>\n",
        "      <td>Component</td>\n",
@@ -245,44 +256,44 @@
        "</div>"
       ],
       "text/plain": [
-       "  Manufacturer Category Category Path 1    Category Path 2 Category Path 3  \\\n",
-       "0      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "1      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "2      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "3      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "4      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "5      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "6      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "7      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "8      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
-       "9      Crucial    SATA3       Component  Solid State Drive           SATA3   \n",
+       "      Item No Manufacturer Category Category Path 1    Category Path 2  \\\n",
+       "0  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "1  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "2  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "3  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "4  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "5  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "6  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "7  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "8  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
+       "9  1000M500D1      Crucial    SATA3       Component  Solid State Drive   \n",
        "\n",
-       "   Price(USD)  Cost price  Inventory  Shipping  Profit STOCK TYPE       Date  \\\n",
-       "0       135.3     101.475          0       2.5  31.325  Recurring  13-Feb-19   \n",
-       "1       135.3     101.475          0       2.5  31.325  Recurring  14-Feb-19   \n",
-       "2       135.3     101.475          0       2.5  31.325  Recurring  15-Feb-19   \n",
-       "3       135.3     101.475          0       2.5  31.325  Recurring  16-Feb-19   \n",
-       "4       135.3     101.475          0       2.5  31.325  Recurring  17-Feb-19   \n",
-       "5       135.3     101.475          0       2.5  31.325  Recurring  18-Feb-19   \n",
-       "6       135.3     101.475          0       2.5  31.325  Recurring  19-Feb-19   \n",
-       "7       135.3     101.475          0       2.5  31.325  Recurring  20-Feb-19   \n",
-       "8       135.3     101.475          0       2.5  31.325  Recurring  21-Feb-19   \n",
-       "9       135.3     101.475          0       2.5  31.325  Recurring  22-Feb-19   \n",
+       "  Category Path 3  Price(USD)  Cost price  Inventory  Shipping  Profit  \\\n",
+       "0           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "1           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "2           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "3           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "4           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "5           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "6           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "7           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "8           SATA3       135.3     101.475          0       2.5  31.325   \n",
+       "9           SATA3       135.3     101.475          0       2.5  31.325   \n",
        "\n",
-       "  In Stock  weight(lb)  Initial Stock  \n",
-       "0        Y        0.25             51  \n",
-       "1        Y        0.25             51  \n",
-       "2        Y        0.25             51  \n",
-       "3        Y        0.25             51  \n",
-       "4        Y        0.25             51  \n",
-       "5        Y        0.25             51  \n",
-       "6        Y        0.25             51  \n",
-       "7        Y        0.25             51  \n",
-       "8        Y        0.25             51  \n",
-       "9        Y        0.25             51  "
+       "  STOCK TYPE       Date In Stock  weight(lb)  Initial Stock  \n",
+       "0  Recurring  13-Feb-19        Y        0.25             51  \n",
+       "1  Recurring  14-Feb-19        Y        0.25             51  \n",
+       "2  Recurring  15-Feb-19        Y        0.25             51  \n",
+       "3  Recurring  16-Feb-19        Y        0.25             51  \n",
+       "4  Recurring  17-Feb-19        Y        0.25             51  \n",
+       "5  Recurring  18-Feb-19        Y        0.25             51  \n",
+       "6  Recurring  19-Feb-19        Y        0.25             51  \n",
+       "7  Recurring  20-Feb-19        Y        0.25             51  \n",
+       "8  Recurring  21-Feb-19        Y        0.25             51  \n",
+       "9  Recurring  22-Feb-19        Y        0.25             51  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,22 +304,22 @@
     "import numpy as np\n",
     "data = pd.read_csv('ML_data_LSTM.csv')\n",
     "data.reset_index(drop=True, inplace=True)\n",
-    "data = data.drop(['Item No', 'Manufacturer No', 'Product Name', 'List No',\n",
+    "data = data.drop(['Manufacturer No', 'Product Name', 'List No',\n",
     "                 'UPC Code', 'SaleRate', 'SaleRateNew'], axis=1)\n",
     "data.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(378000, 15)\n",
-      "(378000, 15)\n"
+      "(378000, 16)\n",
+      "(378000, 16)\n"
      ]
     }
    ],
@@ -320,7 +331,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Item No', 'Manufacturer', 'Category', 'Category Path 1',\n",
+       "       'Category Path 2', 'Category Path 3', 'Price(USD)', 'Cost price',\n",
+       "       'Inventory', 'Shipping', 'Profit', 'STOCK TYPE', 'Date', 'In Stock',\n",
+       "       'weight(lb)', 'Initial Stock'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +379,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Item No</th>\n",
        "      <th>Manufacturer</th>\n",
        "      <th>Category</th>\n",
        "      <th>Category Path 1</th>\n",
@@ -368,11 +404,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Manufacturer, Category, Category Path 1, Category Path 2, Category Path 3, Price(USD), Cost price, Inventory, Shipping, Profit, STOCK TYPE, Date, In Stock, weight(lb), Initial Stock]\n",
+       "Columns: [Item No, Manufacturer, Category, Category Path 1, Category Path 2, Category Path 3, Price(USD), Cost price, Inventory, Shipping, Profit, STOCK TYPE, Date, In Stock, weight(lb), Initial Stock]\n",
        "Index: []"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,13 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Item No             object\n",
       "Manufacturer        object\n",
       "Category            object\n",
       "Category Path 1     object\n",
@@ -406,6 +443,7 @@
       "weight(lb)         float64\n",
       "Initial Stock        int64\n",
       "dtype: object\n",
+      "Item No             object\n",
       "Manufacturer        object\n",
       "Category            object\n",
       "Category Path 1     object\n",
@@ -433,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -501,18 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4200, 15)\n",
-      "(2670, 15)\n",
-      "(333, 15)\n",
-      "(152, 15)\n",
-      "(79, 15)\n"
+      "(4200, 16)\n",
+      "(2670, 16)\n",
+      "(333, 16)\n",
+      "(152, 16)\n",
+      "(79, 16)\n"
      ]
     }
    ],
@@ -527,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,17 +576,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(378000, 553)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "nominal_data_2 = nominal_data\n",
@@ -564,12 +594,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "encoded_data = pd.concat([ordinal_data, pd.DataFrame(onehotlabels)], axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = encoded_data.groupby('')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Manufacturer  Category  Category Path 1  Category Path 2  Category Path 3\n",
+       "AIC           1U        Component        Server           Server Barebone    [26-Mar-19, 27-Mar-19, 28-Mar-19, 29-Mar-19, 3...\n",
+       "Name: Date, dtype: object"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data.head(5)\n",
+    "new_data = new_data.aggregate(lambda x: list(x))\n",
+    "new_data.head(1).Date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Price(USD)', 'Cost price', 'Inventory', 'Shipping', 'Profit',\n",
+       "       'STOCK TYPE', 'Date', 'In Stock', 'weight(lb)', 'Initial Stock'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
