Blowout prediciton days calclusted using GBM output

--- a/Thessis/Blowout Prediction (Model only).ipynb
+++ b/Thessis/Blowout Prediction (Model only).ipynb
@@ -920,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1035,13 +1037,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of days prediction (i.e Blowout period)"
+    "#### Number of days prediction (i.e Blowout period)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
